# aa-onboarding-checklist

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
onboardingchecklist/: __init__.py  admin.py  apps.py  auth_hooks.py  checklist.py  esi.py  models.py  resolve.py  urls.py  views.py
onboardingchecklist/migrations/: 0001_initial.py  0002_config_require_teamspeak.py  0003_config_hide_when_complete.py  0004_alter_config_staging_name.py  0005_staginglocation.py  0006_move_staging_to_list.py  0007_jumpclonelocation.py  0008_knownlocation.py  0009_knownlocation_icon.py  0010_alter_knownlocation_icon.py  0011_jumpclonelocation_icon_staginglocation_icon.py  0012_jumpclonelocation_icon_size_and_more.py
onboardingchecklist/static/onboardingchecklist/: onboardingchecklist.css
onboardingchecklist/templates/onboardingchecklist/: _checklist.html  dashboard.html
